fix queue container alignment

--- a/src/views/Player/Player.css
+++ b/src/views/Player/Player.css
@@ -225,7 +225,7 @@
 }
 .queueVisible {
   opacity: 1;
-  top: 98.5px;
+  top: 99.5px;
 }
 
 .smallPlayer .queueContainer {
